--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -13,9 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   margin: 0;  
-}
+} */
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -28,7 +28,7 @@ body {
   margin: 0;
   display: flex;
   flex-flow: column wrap; /* los elementos toman la direccion de columna y pueden irse a otra linea si desbordan el contenedor*/
-  place-items: center;
+  /*place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -38,16 +38,7 @@ h1 {
   line-height: 1.1;
 }
 
-.card {
-  padding: 2em;
-}
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
 button {
   border-radius: 8px;
@@ -79,4 +70,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
