--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,12 @@
+body{
+  margin: auto;
+  display: flex;
+  flex-direction: column;  
+  max-width: 100vh;
+
+}
+
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
